# RITA

./: .gitignore  CMakeLists.txt  INSTALL.sh  RUN.sh
backend/: decoder.c  decoder.h  dyld_data.c  dyld_data.h  encoder.c  encoder.h  list.c  list.h  mach_parser.c  mach_parser.h  msg.c  msg.h  process.c  process.h  run.c  run.h  session.c  session.h  tracer.c  types.c  types.h
frontend/: .gitignore  index.html  package-lock.json  package.json  webpack.config.js
frontend/js/: App.jsx  index.jsx
frontend/src/: Api.jsx  App.jsx  MemoryRow.jsx  MemoryTable.jsx  RegisterRow.jsx  RegisterTable.jsx  TraceList.jsx  TraceRow.jsx  style.css
middleware/: commit.py  decoder.py  register.py  server.py  trace_handler.py
middleware/lib/src/: decoder.c  decoder.h
test/: test.c  test2.c
